# openpod

./: README.md
dox/: README
dox/source/: conf.py  directories.rst.inc  examples.rst.inc  index.rst  introduction.rst.inc  structure.rst.inc
dox/source/img/: driver_structure.drawio
src/: Makefile  config.mk  pod_local_types.h
src/barebones/: README
src/barebones/complex/: TODO
src/barebones/simple/: README  TODO  simple_driver_skeleton.c  simple_driver_skeleton.h  simple_driver_skeleton_defaul.c  simple_driver_skeleton_nonimpl.c  simple_driver_skeleton_struct.c
src/examples/: Makefile  README
src/examples/bochs/: Makefile  README  pod_bochs.c  pod_bochs.h  pod_bochs_struct.c  pod_bochs_util.c
src/examples/kernel/: Makefile  README  pod_link_unlink.c  pod_process_event.c  pod_start_stop.c  pod_video_io.c
src/libs/: Makefile  README
src/libs/indirect_kernel/: Makefile  link.c
src/libs/openpod_helpers/: Makefile  device.c  driver.c  drv_stubs.c  mem.c  openpod.adb  openpod.ads  pod_dev_event.c  properties.c  request.c  rq_stubs.c  rq_to_sync.c
src/openpod/: Makefile  README  openpod.h  pod_bus.h  pod_deffunc.h  pod_dev_class.h  pod_dev_q.h  pod_device.h  pod_driver.h  pod_io_block.h  pod_io_net.h  pod_io_video.h  pod_kernel_api.h  pod_properties.h  pod_queues.h  pod_rq.h  pod_types.h
src/os/: README
src/os/embox/: Makefile  (+6 more)
src/test/: Makefile  README
src/test/unit/suites/: CMakeLists.txt  suite_amap.c  suite_funcs.c  suite_pool.c  suite_skeleton.c  suite_start_stop.c
tmp/: README  pod_dev_class.h  pod_dev_q.c  pod_io_net.h  pod_queues.h
(+8 files in other folders)
